{
    "name": "GameControls",
    "maps": [
        {
            "name": "Movement",
            "id": "0e46f0db-265d-4069-ad74-f7822ea436cf",
            "actions": [
                {
                    "name": "MovementBase",
                    "type": "PassThrough",
                    "id": "a562751e-9f14-4fe4-8a58-1d46f50d2e6d",
                    "expectedControlType": "Vector2",
                    "processors": "",
                    "interactions": "",
                    "initialStateCheck": false
                },
                {
                    "name": "Jump",
                    "type": "Button",
                    "id": "7071ddc7-ed02-46b4-a529-9ca07069d72b",
                    "expectedControlType": "Button",
                    "processors": "",
                    "interactions": "",
                    "initialStateCheck": false
                }
            ],
            "bindings": [
                {
                    "name": "2D Vector",
                    "id": "2eb4d5b6-3c1b-4609-b06d-9b3735c004c3",
                    "path": "2DVector",
                    "interactions": "",
                    "processors": "",
                    "groups": "",
                    "action": "MovementBase",
                    "isComposite": true,
                    "isPartOfComposite": false
                },
                {
                    "name": "up",
                    "id": "b3465e86-0bae-4eb3-8954-68efdbee994c",
                    "path": "<Keyboard>/upArrow",
                    "interactions": "",
                    "processors": "",
                    "groups": "Default",
                    "action": "MovementBase",
                    "isComposite": false,
                    "isPartOfComposite": true
                },
                {
                    "name": "down",
                    "id": "7c30f3f5-a549-40dd-9f63-ebdd588bbdb7",
                    "path": "<Keyboard>/downArrow",
                    "interactions": "",
                    "processors": "",
                    "groups": "Default",
                    "action": "MovementBase",
                    "isComposite": false,
                    "isPartOfComposite": true
                },
                {
                    "name": "left",
                    "id": "d316959b-522f-49c0-b998-8c3d6d9d14f3",
                    "path": "<Keyboard>/leftArrow",
                    "interactions": "",
                    "processors": "",
                    "groups": "Default",
                    "action": "MovementBase",
                    "isComposite": false,
                    "isPartOfComposite": true
                },
                {
                    "name": "right",
                    "id": "0b3b4536-ca3c-452f-9030-199783abc3ce",
                    "path": "<Keyboard>/rightArrow",
                    "interactions": "",
                    "processors": "",
                    "groups": "Default",
                    "action": "MovementBase",
                    "isComposite": false,
                    "isPartOfComposite": true
                },
                {
                    "name": "",
                    "id": "1ab1236f-4b16-4e1c-9789-fcefa43a67d1",
                    "path": "<Keyboard>/space",
                    "interactions": "",
                    "processors": "",
                    "groups": "Default",
                    "action": "Jump",
                    "isComposite": false,
                    "isPartOfComposite": false
                }
            ]
        },
        {
            "name": "InterAction",
            "id": "fe025fed-9ec2-4abc-aa05-4d06a569533f",
            "actions": [
                {
                    "name": "Interact",
                    "type": "Button",
                    "id": "44b371b4-da04-4c78-a35e-cebdbe03b049",
                    "expectedControlType": "Button",
                    "processors": "",
                    "interactions": "",
                    "initialStateCheck": false
                },
                {
                    "name": "Shoot",
                    "type": "Button",
                    "id": "034e7320-e844-4d97-a8dc-bd74861715d7",
                    "expectedControlType": "Button",
                    "processors": "",
                    "interactions": "",
                    "initialStateCheck": false
                },
                {
                    "name": "WeaponNext",
                    "type": "Button",
                    "id": "1edc6314-25c3-4c5b-8a2f-1d2075ae6cea",
                    "expectedControlType": "Button",
                    "processors": "",
                    "interactions": "",
                    "initialStateCheck": false
                },
                {
                    "name": "WeaponPrevious",
                    "type": "Button",
                    "id": "0a06506f-0c30-497d-950e-1b62c5fbf69a",
                    "expectedControlType": "Button",
                    "processors": "",
                    "interactions": "",
                    "initialStateCheck": false
                },
                {
                    "name": "Fun",
                    "type": "Button",
                    "id": "f162f065-487a-4af8-a392-6bdb257301f5",
                    "expectedControlType": "Button",
                    "processors": "",
                    "interactions": "",
                    "initialStateCheck": false
                }
            ],
            "bindings": [
                {
                    "name": "",
                    "id": "54610704-e1c9-4444-bdb2-6d5624beb3bc",
                    "path": "<Keyboard>/e",
                    "interactions": "",
                    "processors": "",
                    "groups": "Default",
                    "action": "Interact",
                    "isComposite": false,
                    "isPartOfComposite": false
                },
                {
                    "name": "",
                    "id": "f002fea2-c4df-447a-b9ee-e4fe5efddc70",
                    "path": "<Keyboard>/leftCtrl",
                    "interactions": "",
                    "processors": "",
                    "groups": "Default",
                    "action": "Shoot",
                    "isComposite": false,
                    "isPartOfComposite": false
                },
                {
                    "name": "",
                    "id": "e4c597e6-366f-422c-a394-2a2d214a1e88",
                    "path": "<Keyboard>/x",
                    "interactions": "",
                    "processors": "",
                    "groups": "Default",
                    "action": "WeaponNext",
                    "isComposite": false,
                    "isPartOfComposite": false
                },
                {
                    "name": "",
                    "id": "ea46598b-86ab-4f5f-bbfc-dc5d40dd1bc7",
                    "path": "<Keyboard>/y",
                    "interactions": "",
                    "processors": "",
                    "groups": "Default",
                    "action": "WeaponPrevious",
                    "isComposite": false,
                    "isPartOfComposite": false
                },
                {
                    "name": "",
                    "id": "9b845c58-2d4d-445a-a6ff-710c8dba1240",
                    "path": "<Keyboard>/tab",
                    "interactions": "",
                    "processors": "",
                    "groups": "",
                    "action": "Fun",
                    "isComposite": false,
                    "isPartOfComposite": false
                }
            ]
        }
    ],
    "controlSchemes": [
        {
            "name": "Default",
            "bindingGroup": "Default",
            "devices": [
                {
                    "devicePath": "<Keyboard>",
                    "isOptional": false,
                    "isOR": false
                }
            ]
        }
    ]
}